...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" text="Image picker behavior" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="2pz-XF-uhl">
                                                    <rect key="frame" x="15" y="0.0" width="550" height="43"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" label="Image Picker Behavior">
                                            <accessibilityTraits key="traits" none="YES"/>
                                            <bool key="isElement" value="YES"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Behaviors" id="tQt-TN-PWz"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="6Cn-md-YlS" sceneMemberID="firstResponder"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Select source type" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="UR2-FW-wLY">
                                                    <rect key="frame" x="15" y="0.0" width="570" height="43"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Select from Library" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="RwM-H6-3Kc">
                                                    <rect key="frame" x="15" y="0.0" width="570" height="43"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Manual handle of picking (from camera)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="YSt-TA-xWA">
                                                    <rect key="frame" x="15" y="0.0" width="570" height="43"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                            </subviews>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" label="Manual handle">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2ef-mt-V0r">
                                <rect key="frame" x="16" y="64" width="568" height="536"/>
                                <accessibility key="accessibilityConfiguration" label="Image View">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
...
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E68-Ve-4ty">
                                <rect key="frame" x="264" y="80" width="72" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="Get Image"/>
                                <state key="normal" title="Get Image">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Select from library" id="1ya-tS-6FT"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="5lW-6C-Ws2" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
