/* 
  Localizable.strings
  BheaviorKitDemo

  Created by Ievgen Rudenko on 09/07/15.
  Copyright (c) 2015 MadAppGang. All rights reserved.
*/


"MAGImagePickerBehaviour_CancelButtonTitle" = "Cancel";
"MAGImagePickerBehaviour_PhotoSourceButtonTitle" = "Photo";
"MAGImagePickerBehaviour_CameraSourceButtonTitle" = "Camera";
"MAGImagePickerBehaviour_SavedPhotosAlbumSourceButtonTitle" = "Saved photos";